overlays/uksouth-sandbox/perf-txm/api-reflector/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/upstream-vhost: perf-txm-reflector.sandbox.gb.bink.com
  name: perf-txm-reflector.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: perf-txm-reflector.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-reflector
                port:
                  number: 80
  tls:
    - hosts:
        - perf-txm-reflector.${cluster_name}.${location}.bink.sh
